Link para perfil

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="profile">
                         <img src="./img/perfil.jpg" alt="foto perfil" >
                     </div>
-                    <a href="#" class="instagram-login">Continuar como ss_liliane</a>
+                    <a href="https://www.instagram.com/ss_liliane/" class="instagram-login">Continuar como ss_liliane</a>
                     <a href="#" class="instagram-logout">Entrar com outro usuário</a>
                 </div>
 
